# sixdkb

./: .env.sample  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
docker/postgres/: postgresql.conf
migrations/: 20240105200048_init.down.sql  20240105200048_init.up.sql  20240105200151_movie.up.sql  20240105200957_person.down.sql  20240105200957_person.up.sql  20240105201237_movie_role.down.sql  20240105201237_movie_role.up.sql  20240105224548_progress.down.sql  20240105224548_progress.up.sql  20240106032100_json.down.sql  20240106032100_json.up.sql
scripts/: ids.sh
src/: backoff.rs  db.rs  fetchers.rs  lib.rs  main.rs  models.rs  parsers.rs
src/fetchers/: movie.rs
src/models/: movie_credits.rs  movie_details.rs
src/parsers/: movie.rs  person.rs  tv_series.rs
