[package]
name = "sixdkb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console = "0.15.7"
indicatif = "0.17.7"
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.3", features = [
	"postgres",
	"runtime-tokio-rustls",
	"time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = [
	"macros",
	"sync",
	"signal",
	"rt-multi-thread",
] }
nonzero_ext = "0.3.0"
governor = "0.6.0"
